--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,11 @@ CCDMS_API_KEY=randomkey123456
 #REDIS
 REDIS_URL=redis://localhost:6379
 REDIS_PROVIDER=redis://localhost:6379
+
+#EMINENT
+EMINENT_BACKDOOR_OTP=000000
+OTP_EXPIRATION_MINS=5
+
+#GOOGLE CLOUD
+G_CLOUD_PROJECT_ID=bjp-saral
+G_CLOUD_KEYFILE=bjp-saral-10110d5b819b.json
