--- a/package.json
+++ b/package.json
@@ -2,22 +2,34 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "^5.3.2",
     "esbuild": "^0.15.13",
     "esbuild-plugin-svgr": "^2.0.0",
     "esbuild-sass-plugin": "^2.10.0",
+    "formik": "^2.4.5",
     "postcss": "^8.4.26",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
+    "react-images-uploading": "^3.1.7",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
     "sass": "^1.63.6",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "esbuild-plugin-svgr": "^1.0.1",
+    "sass": "^1.58.3",
+    "webpack-dev-server": "^3"
   },
   "scripts": {
     "build": "node esbuild.config.js",
