--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.10",
+    "@mui/material": "^5.14.11",
+    "@mui/x-date-pickers": "^6.15.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "esbuild": "^0.15.13",
     "esbuild-plugin-svgr": "^2.0.0",
     "esbuild-sass-plugin": "^2.10.0",
