--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
     "sass": "^1.63.6",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "esbuild-plugin-svgr": "^1.0.1",
