--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.1",
+    "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "esbuild": "^0.15.13",
     "esbuild-plugin-svgr": "^2.0.0",
     "esbuild-sass-plugin": "^2.10.0",
+    "material-ui-popup-state": "^5.0.9",
     "postcss": "^8.4.26",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -17,7 +24,13 @@
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
     "sass": "^1.63.6",
+    "styled-components": "^6.0.9",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "esbuild-plugin-svgr": "^1.0.1",
+    "sass": "^1.58.3",
+    "webpack-dev-server": "^3"
   },
   "scripts": {
     "build": "node esbuild.config.js",
