--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "esbuild": "^0.15.13",
     "esbuild-plugin-svgr": "^2.0.0",
     "esbuild-sass-plugin": "^2.10.0",
+    "lodash": "^4.17.21",
     "material-ui-popup-state": "^5.0.9",
     "postcss": "^8.4.26",
     "react": "^18.2.0",
@@ -28,8 +29,6 @@
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "esbuild-plugin-svgr": "^1.0.1",
-    "sass": "^1.58.3",
     "webpack-dev-server": "^3"
   },
   "scripts": {
