changes for the eminent controller

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ SSO_PASSWORD=admin
 #ZILA APP URLS
 SIGN_OUT_URL=https://zila-staging.ccdms.in/sso-logout
 SIGN_IN_URL=https://zila-staging.ccdms.in/
+SIGN_IN_EMINENT_URL=https://zila-staging.ccdms.in/eminent
 
 #LOCATABLE
 LOCATABLE_USER=admin
