Latest Commit 27Oct

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/styled": "^11.11.0",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
+    "@mui/base": "^5.0.0-beta.21",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.1",
@@ -20,7 +21,7 @@
     "esbuild-sass-plugin": "^2.10.0",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
-    "material-ui-popup-state": "^5.0.9",
+    "material-ui-popup-state": "^5.0.10",
     "postcss": "^8.4.26",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
