--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-images-uploading": "^3.1.7",
+    "react-paginate": "^8.2.0",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
     "sass": "^1.63.6",
