--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
-    "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.11",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.16",
     "@mui/x-date-pickers": "^6.15.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.5.1",
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.14.2",
     "sass": "^1.63.6",
     "tailwindcss": "^3.3.3",
+    "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
