--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@mui/icons-material": "^5.14.9",
+    "@mui/lab": "^5.0.0-alpha.151",
     "@mui/material": "^5.14.11",
     "@mui/x-date-pickers": "^6.15.0",
     "autoprefixer": "^10.4.14",
