--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
+    "@mui/lab": "^5.0.0-alpha.151",
     "@mui/base": "^5.0.0-beta.21",
     "@mui/icons-material": "^5.14.14",
-    "@mui/lab": "^5.0.0-alpha.151",
-    "@mui/material": "^5.14.17",
+    "@mui/material": "^5.14.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.1",
     "@mui/x-date-pickers": "^6.16.3",
     "@svgr/webpack": "^8.1.0",
     "autoprefixer": "^10.4.14",
-    "axios": "^1.5.1",
-    "bootstrap": "^5.3.2",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "dayjs": "^1.11.10",
     "esbuild": "^0.15.13",
-    "esbuild-plugin-svgr": "^2.0.1",
     "esbuild-sass-plugin": "^2.10.0",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
@@ -29,13 +28,13 @@
     "postcss": "^8.4.26",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-images-uploading": "^3.1.7",
     "react-paginate": "^8.2.0",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
     "sass": "^1.63.6",
+    "styled-components": "^6.0.9",
     "tailwindcss": "^3.3.3",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
