--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "dateformat": "^5.0.3",
     "dayjs": "^1.11.10",
     "esbuild": "^0.15.13",
     "esbuild-sass-plugin": "^2.10.0",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^5.0.10",
+    "moment": "^2.29.4",
     "postcss": "^8.4.26",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
