--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.1",
     "@mui/x-date-pickers": "^6.18.2",
     "@svgr/webpack": "^8.1.0",
+    "antd": "^5.12.1",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
