--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-images-uploading": "^3.1.7",
+    "react-otp-input": "^3.1.1",
     "react-paginate": "^8.2.0",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
